[package]
name = "helios_test_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.21.1"
tokio = {version = "1", features = ["full"]}
tracing = "0.1.37"
helios = {path="/home/siyuan/workspace/library/helios"}
alloy = { version = "0.2.1", features = ["full"] }
eyre = "0.6.12"
criterion = { version = "0.5.1", features = ["async_tokio", "plotters"] }
ureq = "2.5"
android_logger = "0.11"
log = "0.4"


[lib]
crate_type = ["cdylib"]